--- a/ParticipacaoLucros/ParticipacaoLucros.AzureFunctions/ParticipacaoLucros.AzureFunctions.csproj
+++ b/ParticipacaoLucros/ParticipacaoLucros.AzureFunctions/ParticipacaoLucros.AzureFunctions.csproj
@@ -4,10 +4,12 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AzureFunctions.Autofac" Version="3.0.7" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ParticipacaoLucros.Models\ParticipacaoLucros.Models.csproj" />
+    <ProjectReference Include="..\ParticipacaoLucros.Services\ParticipacaoLucros.Services.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
