--- a/ParticipacaoLucros/ParticipacaoLucros.UnitTests/ParticipacaoLucros.UnitTests.csproj
+++ b/ParticipacaoLucros/ParticipacaoLucros.UnitTests/ParticipacaoLucros.UnitTests.csproj
@@ -7,13 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="NBuilder" Version="6.0.0" />
+    <PackageReference Include="NSubstitute" Version="4.1.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ParticipacaoLucros.AzureFunctions\ParticipacaoLucros.AzureFunctions.csproj" />
+    <ProjectReference Include="..\ParticipacaoLucros.Services\ParticipacaoLucros.Services.csproj" />
   </ItemGroup>
 
 </Project>
