--- a/ParticipacaoLucros/ParticipacaoLucros.Repositories/ParticipacaoLucros.Repositories.csproj
+++ b/ParticipacaoLucros/ParticipacaoLucros.Repositories/ParticipacaoLucros.Repositories.csproj
@@ -1,17 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.0" />
     <PackageReference Include="RestSharp" Version="106.6.9" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ParticipacaoLucros.Models\ParticipacaoLucros.Models.csproj" />
-    <ProjectReference Include="..\ParticipacaoLucros.Repositories\ParticipacaoLucros.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
