--- a/ParticipacaoLucros/ParticipacaoLucros.AzureFunctions/ParticipacaoLucros.AzureFunctions.csproj
+++ b/ParticipacaoLucros/ParticipacaoLucros.AzureFunctions/ParticipacaoLucros.AzureFunctions.csproj
@@ -19,5 +19,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
+    <None Update="participacaolucrosazurefunctions.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
