--- a/ParticipacaoLucros/ParticipacaoLucros.AzureFunctions/ParticipacaoLucros.AzureFunctions.csproj
+++ b/ParticipacaoLucros/ParticipacaoLucros.AzureFunctions/ParticipacaoLucros.AzureFunctions.csproj
@@ -4,6 +4,14 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="participacaolucrosazurefunctions.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="participacaolucrosazurefunctions.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="AzureFunctions.Autofac" Version="3.0.7" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
   </ItemGroup>
@@ -18,9 +26,6 @@
     <None Update="local.settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-    </None>
-    <None Update="participacaolucrosazurefunctions.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
